[project]
name = "cosmin-demo"
version = "0.1.0"
description = "A simple AI agent demo"
authors = [
    {name = "Andromeda",email = "astandley@live.com"}
]
license = "MIT"
requires-python = ">=3.14,<4.0.0"
dependencies = [
    "ollama (>=0.6.2,<0.7.0)",
    "langchain (>=1.3.9,<2.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
